force-app/main/default/objects/ASU_STDNT_RETENTION_SNP__x.object
<CustomObject>
    <fields>
        <fullName>ASR_INDICATOR__c</fullName>
        <description>Data sourced from ASUDW.ASU_STDNT_RETENTION_SNP.ASR_INDICATOR</description>
        <externalDeveloperName>ASR_INDICATOR</externalDeveloperName>
        <label>Academic Status Report</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AVG_MYASU_COHORT__c</fullName>
        <description>Data sourced from ASUDW.ASU_STDNT_RETENTION_SNP.AVG_MYASU_COHORT</description>
        <externalDeveloperName>AVG_MYASU_COHORT</externalDeveloperName>
        <label>MyASU Usage Cohort</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CI_INDEX_INDICATOR__c</fullName>
        <description>Data sourced from ASUDW.ASU_STDNT_RETENTION_SNP.CI_INDEX_INDICATOR</description>
        <externalDeveloperName>CI_INDEX_INDICATOR</externalDeveloperName>
        <label>CI Index</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CREATED_EW_DTTM__c</fullName>
        <description>Data sourced from ASUDW.ASU_STDNT_RETENTION_SNP.CREATED_EW_DTTM</description>
        <externalDeveloperName>CREATED_EW_DTTM</externalDeveloperName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CUM_GPA_INDICATOR__c</fullName>
        <description>Data sourced from ASUDW.ASU_STDNT_RETENTION_SNP.CUM_GPA_INDICATOR</description>
        <externalDeveloperName>CUM_GPA_INDICATOR</externalDeveloperName>
        <label>Cumulative GPA</label>
        <precision>5</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EADVISOR_INDICATOR__c</fullName>
        <description>Data sourced from ASUDW.ASU_STDNT_RETENTION_SNP.EADVISOR_INDICATOR</description>
        <externalDeveloperName>EADVISOR_INDICATOR</externalDeveloperName>
        <label>eAdvisor Indicator</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMPLID__c</fullName>
        <description>Data sourced from ASUDW.ASU_STDNT_RETENTION_SNP.EMPLID</description>
        <externalDeveloperName>EMPLID</externalDeveloperName>
        <label>Contact</label>
        <length>10</length>
        <referenceTargetField>Contact.EMPLID__c</referenceTargetField>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Student Retention Snapshot (external)</relationshipLabel>
        <relationshipName>Student_Retention_Snapshot_external</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>ENRL_HOLD_COUNT__c</fullName>
        <description>Data sourced from ASUDW.ASU_STDNT_RETENTION_SNP.ENRL_HOLD_COUNT</description>
        <externalDeveloperName>ENRL_HOLD_COUNT</externalDeveloperName>
        <label>Enrollment Holds</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FA_INDICATOR__c</fullName>
        <description>Data sourced from ASUDW.ASU_STDNT_RETENTION_SNP.FA_INDICATOR</description>
        <externalDeveloperName>FA_INDICATOR</externalDeveloperName>
        <label>Financial Aid Issue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINANCIAL_HOLD__c</fullName>
        <description>Data sourced from ASUDW.ASU_STDNT_RETENTION_SNP.FINANCIAL_HOLD</description>
        <externalDeveloperName>FINANCIAL_HOLD</externalDeveloperName>
        <label>Financial Hold</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NEXT_TERM_ENROLLED__c</fullName>
        <description>Data sourced from ASUDW.ASU_STDNT_RETENTION_SNP.NEXT_TERM_ENROLLED</description>
        <externalDeveloperName>NEXT_TERM_ENROLLED</externalDeveloperName>
        <label>Enrolled in Next Term</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAST_DUE_TIP__c</fullName>
        <description>Data sourced from ASUDW.ASU_STDNT_RETENTION_SNP.PAST_DUE_TIP</description>
        <externalDeveloperName>PAST_DUE_TIP</externalDeveloperName>
        <label>Past Due Amount</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PROBATION_INDICATOR__c</fullName>
        <description>Data sourced from ASUDW.ASU_STDNT_RETENTION_SNP.PROBATION_INDICATOR</description>
        <externalDeveloperName>PROBATION_INDICATOR</externalDeveloperName>
        <label>Probation Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SNP_WEEK__c</fullName>
        <description>Data sourced from ASUDW.ASU_STDNT_RETENTION_SNP.SNP_WEEK</description>
        <externalDeveloperName>SNP_WEEK</externalDeveloperName>
        <label>Current Term Week Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>STRM__c</fullName>
        <description>Data sourced from ASUDW.ASU_STDNT_RETENTION_SNP.STRM</description>
        <externalDeveloperName>STRM</externalDeveloperName>
        <label>Term</label>
        <length>4</length>
        <referenceTargetField>Term__c.PeopleSoft_Code__c</referenceTargetField>
        <referenceTo>Term__c</referenceTo>
        <relationshipLabel>Student Retention Snapshot (external)</relationshipLabel>
        <relationshipName>Student_Retention_Snapshot_external</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>TERM_MYASU_USAGE__c</fullName>
        <description>Data sourced from ASUDW.ASU_STDNT_RETENTION_SNP.TERM_MYASU_USAGE</description>
        <externalDeveloperName>TERM_MYASU_USAGE</externalDeveloperName>
        <label>MyASU Usage Term</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRANSCRIPTS_SENT_COUNT__c</fullName>
        <description>Data sourced from ASUDW.ASU_STDNT_RETENTION_SNP.TRANSCRIPTS_SENT_COUNT</description>
        <externalDeveloperName>TRANSCRIPTS_SENT_COUNT</externalDeveloperName>
        <label>Transcripts Sent</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <description>Data source script can be found here: https://docs.google.com/document/d/1SWAx4KqMeBCUbwhzahuUNAt-REKBvMHWfNN-jZ2XzOs/edit</description>
    <externalDataSource>asu_ps_lightning</externalDataSource>
    <externalName>ASU_STDNT_RETENTION_SNP</externalName>
    <label>Student Retention Snapshot (external)</label>
    <pluralLabel>Student Retention Snapshot (external)</pluralLabel>
</CustomObject>